<resources>
    <string name="app_name">BookRecommend</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">动态</string>
    <string name="title_notifications">Notifications</string>
    <string name="setting_string">设置</string>
    <string name="search_button_string">search</string>
    <string name="search_input_hint">请输入 ISBN 或书名查找</string>
    <string name="book_image_string">BookImage</string>
    <string name="user_share_string">UserShare</string>
    <string name="star_icon_string">starIcon</string>
    <string name="create_new_share_string">Create new share</string>
    <string name="create_share">创建动态</string>
    <string name="add_comment">添加评论</string>
    <string name="upload_share_string">上传</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_share_label">创建动态</string>
    <string name="book_detail_label">书籍详情</string>
    <string name="font_color_string">字体颜色</string>
    <string name="font_kind_string">字体种类</string>
    <string name="font_size_string">字体大小</string>
    <string name="create_content_string">创建内容</string>
    <string name="undo_string">撤销</string>
    <string name="create_string">创建</string>
    <string name="input_head_hint">请输入标题信息</string>
    <string name="input_text_hint">请输入正文信息</string>
    <string name="login_account">账号</string>
    <string name="email_phone_string">邮箱/手机号</string>
    <string name="login_password_string">密码</string>
    <string name="verify_code_login_string">忘记密码？试试验证码登录</string>
    <string name="verify_code_string">验证码</string>
    <string name="acquire_gender_string">您的性别：</string>
    <string name="male_string">男</string>
    <string name="female_string">女</string>
    <string name="user_name_hint">您的姓名:</string>
    <string name="head_image_hint">您的头像：</string>
    <string name="upload_image_string">UploadImage</string>
    <string name="next_string">下一步</string>
    <string name="select_book_kind_string">选择你喜欢的图书类型</string>
    <string name="input_password_hint">请输入密码：</string>
    <string name="re_input_password">再次输入：</string>
    <string name="finish_string">完成</string>
    <string name="user_feature_select_string">用户兴趣选择</string>
    <string name="register_password_string">注册密码</string>
    <string name="verify_code_login">验证码登录</string>
    <string name="basic_info_select">基础信息选择</string>
    <string name="register_string">注册</string>
    <string name="login_string">登录</string>
    <string name="get_code_string">获取验证码</string>
    <string name="head_image_string">HeadImage</string>
    <string name="login_account_string">登录账号:</string>
    <string name="through_note_string">浏览记录</string>
    <string name="has_stared_string">点赞过的</string>
    <string name="has_commented_string">评论过的</string>
    <string name="has_collected_string">已收藏的</string>
    <string name="book_name_string">BookName</string>
    <string name="author_name_string">AuthorName</string>
    <string name="publisher_info_string">PublisherInfo</string>
    <string name="score_string">Score</string>
    <string name="five_score_string">5分</string>
    <string name="four_score_string">4分</string>
    <string name="three_score_string">3分</string>
    <string name="one_score_string">1分</string>
    <string name="two_score_string">2分</string>
    <string name="book_intro_string">Book Introduction</string>
    <string name="chapter_info">章节信息</string>
    <string name="author_intro_string">Author Introduction</string>
    <string name="your_mark_score_string">您的分数:</string>
    <string name="ok_string">确定</string>
    <string name="cancel_string">取消</string>
    <string name="refer_vook_review"><![CDATA[相关书评——>]]></string>
    <string name="create_book_review">创建书评</string>
</resources>