<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.BasicInfoRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/genderHint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"
                    android:gravity="center"
                    android:text="@string/acquire_gender_string"
                    android:theme="@style/RegisterTextStyle"
                    tools:ignore="NestedWeights" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="horizontal"
                    android:checkedButton="@id/maleRadio"
                    android:weightSum="10">

                    <RadioButton
                        android:id="@+id/maleRadio"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="@string/male_string"
                        android:theme="@style/RegisterTextStyle" />

                    <RadioButton
                        android:id="@+id/femaleRadio"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="@string/female_string"
                        android:theme="@style/RegisterTextStyle" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="2.5"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/userNameHint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"
                    android:gravity="center"
                    android:text="@string/user_name_hint"
                    android:theme="@style/RegisterTextStyle"
                    tools:ignore="NestedWeights" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6.3"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:theme="@style/RegisterTextStyle"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/headImageHint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/head_image_hint"
                    android:theme="@style/RegisterTextStyle"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/headImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/upload_image_string"
                    android:src="@drawable/upload_file" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    style="@style/LoginButtonColorLess"
                    android:text="@string/next_string"
                    android:textSize="32sp"
                    android:theme="@style/LoginButtonStyle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    tools:ignore="NestedWeights" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>